--- a/app/src/main/res/layout/activity_edit_texts.xml
+++ b/app/src/main/res/layout/activity_edit_texts.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".EditTextsActivity">
 
@@ -35,7 +36,11 @@
             android:layout_marginLeft="32dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="32dp">
+            android:layout_marginRight="32dp"
+            app:counterEnabled="true"
+            app:counterMaxLength="10"
+            app:counterOverflowTextAppearance="@style/characterOverFlow"
+            app:passwordToggleEnabled="true">
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/edit_text_password"
